@@ -1,5 +1,11 @@
 2008-07-18	Nick Schermer <nick@xfce.org>
 
+	* dialogs/mouse-settings/main.c: Allow editing the display name
+	  of the device in the dialog. This way users can set usable names
+	  for devices that are plugged.
+
+2008-07-18	Nick Schermer <nick@xfce.org>
+
 	* dialogs/mouse-settings/main.c: Change option values string.
 
 2008-07-18	Nick Schermer <nick@xfce.org>
